made arraylist to list